@@ -5,7 +5,8 @@ Changelog
 1.0.10 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Download virtualenv via PIP. This fixes an error caused by the PyPI
+  restructuring
 
 
 1.0.9 (2016-01-03)
